# ebrm-system

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: __init__.py  gsm8k.py  gsm8k_verifier.py  longmemeval.py  runner.py
benchmarks/datasets/: __init__.py  longmemeval_official.py
benchmarks/embedders/: __init__.py  azure_openai.py  base.py  hash.py  openai_compatible.py  sentence_transformer.py
benchmarks/entity/: __init__.py  extractor.py  reranker.py
benchmarks/extraction/: __init__.py  azure_llm.py  base.py
benchmarks/fusion/: __init__.py  llm_fusion.py
benchmarks/judges/: __init__.py  azure_llm.py
benchmarks/query_rewrite/: __init__.py  azure_llm.py  base.py
benchmarks/reader/: __init__.py  azure_llm.py  openai_compatible.py
benchmarks/results/: longmemeval-oracle-v0.17.0.json  longmemeval-oracle-v0.18.0.json  longmemeval-oracle-v0.19.0.json  longmemeval-oracle-v0.20.0-temporal-only.json  longmemeval-oracle-v0.20.0-tuned.json  longmemeval-oracle-v0.20.0.json  longmemeval-oracle-v0.21.0.json  longmemeval-oracle-v0.22.0.json  longmemeval-oracle-v0.23.0.json  longmemeval-oracle-v0.24.0.json  longmemeval-oracle-v0.25.0.json  longmemeval-oracle-v0.26.0.json  longmemeval-oracle-v0.27.0.json  longmemeval-oracle-v0.28.0.json  longmemeval-v0.14.0.json
benchmarks/retrieval/: __init__.py  base.py  bm25.py  dense.py  multi_query.py  neighbors.py  reranker.py  rrf.py
benchmarks/router/: __init__.py
benchmarks/temporal/: __init__.py  dates.py  reranker.py
configs/: default.yaml
docs/: adr-001-architecture.md  api.md  architecture.md  guide-intent.md  guide-verifiers.md  guide-voting.md  index.md  roadmap.md
scripts/: demo_e2e.py  demo_results.json  hard_results.json  probe_hard.py  run_longmemeval.py  run_longmemeval_official.py
src/ebrm_system/: __init__.py  __main__.py  _experimental.py  cli.py
src/ebrm_system/core/: __init__.py  compute_profile.py  reasoner.py  refinement.py
src/ebrm_system/inference/: __init__.py  candidates.py  diverse_selector.py  halt.py  latent_recursion.py  mcts.py  qjl.py  torch_langevin.py  turboquant_attention.py  turboquant_kv.py
tests/: conftest.py  test_benchmarks_gsm8k_verifier.py  test_benchmarks_longmemeval.py  test_benchmarks_neighbors.py  test_benchmarks_runner.py  test_benchmarks_v17.py  test_benchmarks_v18.py  test_benchmarks_v19.py  test_benchmarks_v20.py  test_benchmarks_v21.py  test_benchmarks_v22.py  test_benchmarks_v23.py  test_benchmarks_v24.py  test_benchmarks_v25.py  test_benchmarks_v26.py  test_benchmarks_v27.py  test_benchmarks_v28.py  test_benchmarks_v29.py  test_benchmarks_v29_providers.py  test_cli.py  test_cli_verify_plan.py  test_core_compute_profile.py  test_core_reasoner.py  test_core_reasoner_v06.py  test_core_reasoner_v07.py  test_core_reasoner_v08.py  test_core_reasoner_v10.py  test_core_reasoner_v11.py  test_core_reasoner_v12.py  test_core_reasoner_v15.py  test_core_refinement.py  test_experimental_marker.py  test_inference_candidates.py  test_inference_diverse_selector.py  test_inference_halt.py  test_inference_latent_recursion.py  test_inference_mcts.py  test_inference_qjl.py  test_inference_torch_langevin.py  test_inference_turboquant_attention.py  (+17 more)
(+23 files in other folders)
