[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ebrm-system"
version = "0.18.0"
description = "EBRM System — a full reasoning pipeline with hierarchical latents, adaptive test-time compute, symbolic verification, and self-consistency voting."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Piyush Tiwari", email = "piyush@bytical.ai" }]
keywords = ["llm", "reasoning", "energy-based-model", "verifier", "inference", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "sympy>=1.13",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
model = [
    "torch>=2.4",
    "transformers>=4.45",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
benchmark = [
    "datasets>=2.20",
    "pandas>=2.2",
    "tqdm>=4.66",
    "trackio>=0.2",
]
embedders = [
    "openai>=1.50",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/piyushptiwari1/ebrm-system"
Documentation = "https://piyushptiwari1.github.io/ebrm-system"
Repository = "https://github.com/piyushptiwari1/ebrm-system"
Issues = "https://github.com/piyushptiwari1/ebrm-system/issues"
"Related (v2 paper)" = "https://github.com/piyushptiwari1/ebrm"

[project.scripts]
ebrm-system = "ebrm_system.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ebrm_system"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM117"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/ebrm_system"]

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=ebrm_system --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: slow tests (deselect with '-m not slow')",
    "gpu: tests requiring CUDA",
    "integration: integration tests",
]

# ---------- Coverage ----------
[tool.coverage.run]
source = ["src/ebrm_system"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
